--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsnd --respawn --clear src/server.ts",
-    "build": "rimraf ./dist && tsc",
+    "build": "./dist && tsc",
     "start": "node dist/server.js"
   },
   "author": "Hector Salas",
