--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "tsnd --respawn --clear src/server.ts",
     "build": "rimraf ./dist && tsc",
-    "start": "node src/server.js"
+    "start": "node dist/server.js"
   },
   "author": "Hector Salas",
   "license": "ISC",
